examples/http-conversion/feature-requests/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feature-request-demo
  labels:
    app: feature-request-demo
spec:
  selector:
    app: feature-request-demo
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
    name: http
  type: ClusterIP
